# precice-ai

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  document.md  kb_sources.json  pyproject.toml  requirements.txt  server.py
.claude/skills/graphify/: SKILL.md
.github/workflows/: kb-ingest.yml  pylint.yml
core/: __init__.py  command_runner.py  knowledge_base.py  paths.py  safety.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-07-05/: .graphify_labels.json  graph.json
graphify-out/cache/: stat-index.json
precice_ai/: server.py
precice_ai/cli/: main.py
precice_ai/core/: command_runner.py  knowledge_base.py  paths.py  safety.py
precice_ai/tools/: __init__.py  cli_tools.py  config_tools.py  knowledge_tools.py  log_tools.py  project_tools.py
precice_ai/utils/: topology_schema.json
scripts/: build_embeddings.py  build_forum_embeddings.py  build_github_activity_embeddings.py  compare_kb_search.py  kb_state.py  render_sources_json.py
tools/: __init__.py  config_tools.py  knowledge_tools.py  log_tools.py  project_tools.py
